--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "color": "^3.1.2",
     "core-js": "2.4.1",
     "jspeech": "^0.1.1",
+    "libphonenumber-js": "^1.7.52",
     "markdown-it": "8.3.1",
     "microsoft-speech-browser-sdk": "0.0.12",
     "moment": "^2.22.2",
