--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/react-datepicker": "^1.1.7",
+    "@types/react-spinkit": "^3.0.6",
     "adaptivecards": "1.0.0",
     "analytics-utils": "^0.2.2",
     "axios": "^0.18.1",
@@ -53,6 +54,7 @@
     "react-dropzone": "^5.1.0",
     "react-icons": "^3.10.0",
     "react-redux": "5.0.5",
+    "react-spinkit": "^3.0.0",
     "redux": "3.7.2",
     "redux-observable": "0.13.0",
     "rxjs": "5.4.3",
@@ -70,6 +72,7 @@
     "@types/uuid": "^3.4.4",
     "awesome-typescript-loader": "3.1.2",
     "concurrently": "3.1.0",
+    "css-loader": "^4.3.0",
     "expose-loader": "0.7.3",
     "gulp": "^4.0.2",
     "gulp-exec": "^3.0.1",
@@ -78,9 +81,11 @@
     "last-commit-log": "^1.0.3",
     "node-sass": "^4.14.1",
     "npm-run-all": "3.1.2",
+    "postcss-loader": "^4.0.3",
     "rimraf": "2.6.1",
     "semver": "^5.5.0",
     "source-map-loader": "0.2.1",
+    "style-loader": "^1.3.0",
     "tslint": "5.10.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.3",
