--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/react-datepicker": "^1.1.7",
+    "@types/react-places-autocomplete": "^7.2.6",
     "@types/react-spinkit": "^3.0.6",
     "adaptivecards": "1.0.0",
     "analytics-utils": "^0.2.2",
@@ -53,6 +54,7 @@
     "react-dom": "15.6.1",
     "react-dropzone": "^5.1.0",
     "react-icons": "^3.10.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "5.0.5",
     "react-spinkit": "^3.0.0",
     "redux": "3.7.2",
