--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-device-detect": "^1.6.2",
     "react-dom": "15.6.1",
     "react-dropzone": "^5.1.0",
+    "react-google-autocomplete": "^2.6.1",
     "react-icons": "^3.10.0",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
