--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "npm run watch && npm run start",
     "build-ac-config": "npx microsoft-adaptivecards-scss-to-json ./src/scss/includes/adaptive-card-config.scss > adaptivecards-hostconfig.json",
     "build-all-style": "npm run build-css && npm run build-ac-config && webpack",
-    "build": "npm run build-css && npm run tslint && tsc && webpack --progress",
+    "build": "npm run build-css && webpack --progress",
     "watch": "npm-run-all -p -r -l tsc-watch watch-css webpack-watch",
     "tsc-watch": "tsc -w",
     "webpack": "webpack",
