--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack": "webpack",
     "webpack-watch": "webpack --progress --watch",
     "clean": "rimraf built",
-    "prepublish": "npm run build-css && npm run tslint && tsc && webpack --progress --config webpack.production.config.js",
+    "prepublish": "npm run build-css && webpack --progress --config webpack.production.config.js",
     "start": "http-server -p 3001 -a 0.0.0.0",
     "test": "cd test && npm test",
     "mock": "cd test && npm start",
