get rid of tslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
         "inlineSources": true,
         "strictNullChecks": false
     },
+    "exclude": [
+        "node_modules"
+    ],
     "files": [
         "src/adaptivecards-hostconfig.d.ts",
         "src/BotChat.ts",
