--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,6 +20,7 @@ jobs:
         npm install
     - name: Build application
       run: |
+        export NODE_OPTIONS="--max_old_space_size=4096"
         npm run prepublish
       env:
         NODE_PATH: src
