--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,10 +20,10 @@ jobs:
         npm install
     - name: Build application
       run: |
-        export NODE_OPTIONS="--max_old_space_size=4096"
         npm run prepublish
       env:
         NODE_PATH: src
+        NODE_OPTIONS: "--max_old_space_size=4096"
     - name: Upload application to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
       with:
