--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,7 @@ jobs:
         node-version: 9.9.0
     - name: Install dependencies
       run: |
+        export NODE_OPTIONS="--max_old_space_size=4096"
         npm install
     - name: Build application
       run: |
