--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,9 +17,11 @@ jobs:
         node-version: 9.9.0
     - name: Install dependencies
       run: |
+        export NODE_OPTIONS="--max_old_space_size=4096"
         npm install
     - name: Build application
       run: |
+        export NODE_OPTIONS="--max_old_space_size=4096"
         npm run prepublish
       env:
         NODE_PATH: src
