--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
   "author": "Microsoft Corp",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@types/react-datepicker": "^1.1.7",
     "adaptivecards": "1.0.0",
     "analytics-utils": "^0.2.2",
@@ -55,8 +53,6 @@
     "react-dropzone": "^10.2.0",
     "react-google-autocomplete": "^2.6.1",
     "react-icons": "^3.10.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-markdown": "^8.0.3",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
@@ -64,7 +60,6 @@
     "rxjs": "5.4.3",
     "simple-update-in": "^1.2.0",
     "tslib": "1.7.1",
-    "tslint": "^6.1.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -89,6 +84,7 @@
     "rimraf": "2.6.1",
     "semver": "^5.5.0",
     "source-map-loader": "0.2.1",
+    "tslint": "5.10.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.3",
     "webpack": "^4.44.1",
