--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "author": "Microsoft Corp",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@types/react-datepicker": "^1.1.7",
     "adaptivecards": "1.0.0",
     "analytics-utils": "^0.2.2",
@@ -64,6 +66,7 @@
     "rxjs": "5.4.3",
     "simple-update-in": "^1.2.0",
     "tslib": "1.7.1",
+    "tslint": "^6.1.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -89,7 +92,6 @@
     "rimraf": "2.6.1",
     "semver": "^5.5.0",
     "source-map-loader": "0.2.1",
-    "tslint": "5.10.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.3",
     "webpack": "^4.44.1",
