--- a/package.json
+++ b/package.json
@@ -55,12 +55,15 @@
     "react-dom": "^16.8.0",
     "react-dropzone": "^10.2.0",
     "react-google-autocomplete": "^2.6.1",
+    "react-hls-player": "^1.1.0",
     "react-icons": "^3.10.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lite-youtube-embed": "^2.2.1",
     "react-markdown": "^8.0.3",
     "react-pdf": "^5.3.2",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "5.0.5",
+    "react-social-media-embed": "^2.3.4",
     "redux": "3.7.2",
     "redux-observable": "0.13.0",
     "rxjs": "5.4.3",
